--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -201,14 +200,14 @@
       android:layout_height="48dp"
       android:layout_marginBottom="16dp"
       android:layout_marginTop="16dp"
-      android:background="?colorAccent"
+      android:background="@color/colorAccent"
       android:orientation="horizontal"
       >
     <TextView
         android:id="@+id/compare_button_textview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackground"
+        android:background="?android:selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
@@ -233,7 +232,7 @@
         android:checked="false"
         android:gravity="center_vertical"
         android:text="Version A isHigherThan B"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
         android:textStyle="bold"
         />
     <CheckedTextView
@@ -246,7 +245,7 @@
         android:checked="false"
         android:gravity="center_vertical"
         android:text="Version A isLowerThan B"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
         android:textStyle="bold"
         />
     <CheckedTextView
@@ -259,7 +258,7 @@
         android:checked="false"
         android:gravity="center_vertical"
         android:text="Version A isEqual B"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
         android:textStyle="bold"
         />
   </LinearLayout>
