--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    tools:ignore="HardcodedText"
     >
 
   <LinearLayout
@@ -19,6 +21,7 @@
         android:layout_weight="1"
         android:hint="Version A"
         android:imeOptions="actionNext"
+        android:importantForAutofill="no"
         android:inputType="textNoSuggestions|textVisiblePassword"
         />
     <EditText
@@ -28,6 +31,7 @@
         android:layout_weight="1"
         android:hint="Version B"
         android:imeOptions="actionDone"
+        android:importantForAutofill="no"
         android:inputType="textNoSuggestions|textVisiblePassword"
         />
   </LinearLayout>
